--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </a>
         </section>
         <section>
-            <button class="custom-button" onclick="window.location.href='https://matiasfelipew.github.io/Company-Whiat/';">
+            <button class="custom-button" onclick="window.location.href='https://matiasfelipew.github.io/Whiat/">
                 WHIAT COMPANY
             </button>
         </section>
