--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
                 <img src="MEDIA/COMPANY.png" alt="whiatcompany">
             </a>
         </section>
+
         <section>
-            <button class="custom-button" onclick="window.location.href='https://matiasfelipew.github.io/Whiat/">
-                WHIAT COMPANY
-            </button>
-        </section>
+    <button class="custom-button" onclick="window.location.href='https://matiasfelipew.github.io/Whiat/'">
+        WHIAT COMPANY
+    </button>
+    </section>
 
         <p>click en el email:
             <a href="mailto:matiaswhiat@mail.de">matiaswhiat@mail.de</a>
